remove duplicate sendmail request fix application status template add reason for rejection message

--- a/src/shared/utils/mail-templates/lead-application-status.hbs
+++ b/src/shared/utils/mail-templates/lead-application-status.hbs
@@ -6,7 +6,7 @@
 <body>
     <p>Hello {{firstName}},</p>
     <p>Your application has been
-        {{if status}}
+        {{#if status}}
             <span>Approved!</span><br>
             Welcome to the team...
         {{else}}
