added endpoint to validate link

--- a/src/shared/utils/mail-templates/inventors-lead-invite.hbs
+++ b/src/shared/utils/mail-templates/inventors-lead-invite.hbs
@@ -1,9 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang='en'>
+  <head>
     <title>Lead Application</title>
-</head>
-<body>
-    <p>Hello {{firstName}}, your application for {{positon}} has been received</p>
-</body>
+  </head>
+  <body>
+    <p>Hello!
+      <br />
+      You have been invited to be a lead on Inventors. Please click the link to
+      change your password and update your details
+      {{link}}
+      <br />
+      Please use 'Inventors1234' to login
+    </p>
+  </body>
 </html>
